@@ -67,13 +67,11 @@ class SusyNtAna : public TSelector, public SusyNtTools
     }
 
     // Get event weight - contains generator, pileup, xsec, and lumi weights
-    // Default weight uses A-D7 lumi and pileup weights
+    // Default weight uses A-D lumi and pileup weights
     // You can supply a different luminosity, but the pileup weights will store correspond to the default dataset
-    //virtual float getEventWeight(float lumi = LUMI_A_B14);
-    virtual float getEventWeight(float lumi = LUMI_A_D7);
+    virtual float getEventWeight(float lumi = LUMI_A_D);
     // Use this function to scale MC to the A-B3 unblinded dataset
     // This will use the correct pileup weights for A-B3
-    //virtual float getEventWeight1fb();
     virtual float getEventWeightAB3();
     // Scale MC to A-B (5.83/fb)
     virtual float getEventWeightAB();
