@@ -1,11 +1,16 @@
 # vim: set noexpandtab:
+
+2012-09-17 Steve
+	* Update event weight functions for A-D
+	* Remove wPileup1fb from Event class
+
 2012-09-14 Matt
 	* Added susyFinalState to the ntuple
 
 2012-09-12 Matt
 	* Adding variables to do pdf rewighting. Event Class incremented.
 	* tagging SusyNtuples-00-00-26
-	
+
 2012-09-08 Steve
 	* Replace RESOST up/down terms with single term, to reflect change in SUSYTools
 	* Tagging SusyNtuple-00-00-25
